--- a/extension/styles.css
+++ b/extension/styles.css
@@ -498,6 +498,21 @@ h2{
     .portrait-progress-bar{
         display:none;
     }
+        .settings-panel{
+        width:40vw !important;
+        height:80vh;
+        background-color: rgba(0,0,0,0.85);
+        color:white;
+        gap:20px;
+        display:flex;
+        flex-direction: column;
+        padding: 20px;
+        align-items: center;
+        border-radius: 15px;
+        overflow-y:scroll;
+        scrollbar-width: thin;
+        scrollbar-color: white transparent;
+    }
 
   
 }
@@ -616,7 +631,7 @@ h2{
 }
 
 .settings-panel{
-    width:40vw;
+    width:80vw;
     height:80vh;
     background-color: rgba(0,0,0,0.85);
     color:white;
